<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/main_search_icon"
        android:title="@string/search"
        android:icon="@drawable/search_white"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item android:id="@+id/main_bell_icon"
        android:title="@string/notification"
        android:icon="@drawable/notification"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item android:id="@+id/main_cart_icon"
        android:title="@string/menu_cart"
        android:icon="@drawable/shopping_cart"
        android:orderInCategory="100"
        app:showAsAction="always"/>

</menu>