<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="bottom">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/main_profile_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/nav_header_desc"
        android:src="@mipmap/account_placeholder"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<!--    <ImageView-->
<!--        android:id="@+id/main_profile_image"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:contentDescription="@string/nav_header_desc"-->
<!--        android:paddingTop="@dimen/nav_header_vertical_spacing"-->
<!--        android:elevation="3dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/main_full_name"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:srcCompat="@mipmap/account_placeholder" />-->

    <TextView
        android:id="@+id/main_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/not_signed_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/main_email_address"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/main_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/email_address"
        android:textColor="#80ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/add_profile_icon"
        android:layout_width="15dp"
        android:layout_height="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/main_profile_image"
        app:layout_constraintEnd_toEndOf="@+id/main_profile_image"
        app:srcCompat="@mipmap/add_profile"
        android:elevation="5dp" />
<!--    <ImageView-->
<!--        android:id="@+id/add_profile_icon"-->
<!--        android:layout_width="15dp"-->
<!--        android:layout_height="15dp"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/main_profile_image"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/main_profile_image"-->
<!--        app:srcCompat="@mipmap/add_profile"-->
<!--        android:elevation="5dp"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>